--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,9 @@
     --color-bg-first: #ffffff;
     --color-bg-hero: #2F303A;
     --color-bg-second: #F5F4FA;
+
+    --items: 3;
+    --indent: 30px;
 }
 
 body {
@@ -18,10 +21,12 @@ body {
 h1,h2,h3,h4,h5,h6,a,ul,p{
     margin: 0;
     padding: 0;}
-/* *, ::after, ::before {
-    margin: 0;
-    padding: 0;
-} */
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
 .link{
     text-decoration: none;
 }
@@ -41,19 +46,35 @@ h1,h2,h3,h4,h5,h6,a,ul,p{
     padding-top: 94px;
     padding-bottom: 94px;
 }
+
+.card-set {
+    display: flex;
+    flex-wrap: wrap;
+    margin: calc(-1 * var(--indent) / 2);
+}
+.card-set-item {
+    flex-basis: calc((100% - var(--indent) * var(--items)) / var(--items));
+    margin: calc(var(--indent) / 2);
+}
+.visually-hidden {
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    margin: -1px;
+}
 /* header */
 .header-container{
     border-bottom: 1px solid #ECECEC;
-
-
 }
-
-
 .header-container .container{
     display: flex;
-
 }
-
 .nav-container{
     display: flex;
 }
@@ -65,7 +86,6 @@ h1,h2,h3,h4,h5,h6,a,ul,p{
     font-size: 26px;
     line-height: 1.19;
     color: var(--color-accent);
-    
 }
 .logo.header{
     padding: 32px 0;
@@ -81,7 +101,6 @@ h1,h2,h3,h4,h5,h6,a,ul,p{
     align-items: center;
     margin-left: 93px;
 
-    justify-content: space-between;
 }
 .nav-list:not(:last-child){
     margin-right: 50px;
@@ -187,9 +206,7 @@ h1,h2,h3,h4,h5,h6,a,ul,p{
     text-align: left;
     
 }
-.advantages .list-item:not(:last-child){
-    margin-right: 30px;
-}
+
 .advantages .list-title{
     font-weight: 700;
     line-height: 1.14;
@@ -205,13 +222,9 @@ h1,h2,h3,h4,h5,h6,a,ul,p{
 
 /* About */
 .about .list{
-    display: flex;
-    justify-content: space-between;
     margin-top: 50px;
 }
-.about .list-item:not(:last-child){
-margin-right: 30px;
-}
+
 .section .section-title{
     font-weight: 700;
     font-size: 36px;
@@ -227,13 +240,10 @@ margin-right: 30px;
     background-color: var(--color-bg-second);
     line-height: 1.19;
 
-
 }
 .persons .list{
-    display: flex;
-    justify-content: space-between;
     margin-top: 50px;
-
+    --items: 4;
 }
 .persons .list-item{
     background-color: var(--color-bg-first);
@@ -259,16 +269,14 @@ margin-right: 30px;
 .footer{
     background-color: var(--color-bg-hero);    
     padding: 60px 0;
-
 }
 .contact-footer .list{
     font-style: normal;
     margin-top: 20px;
-    letter-spacing: 0.03em;
-   
+    letter-spacing: 0.03em; 
 }
-.contact-footer .list-item:not( :first-child){
-   padding-top: 9px;
+.contact-footer .list-item:not( :last-child){
+   padding-bottom: 9px;
 }
 .footer .logo{
     padding: 0;
@@ -282,33 +290,17 @@ margin-right: 30px;
     font-size: 14px;
     line-height: 1.71;
     color: var(--color-text);
- 
 }
 .contact-addres{   
     color: var(--color-bg-first);   
 }
-
 .footer .container{
     text-align: left;
-
 }
-
 
 
 /* Portfolio */
 
-.visually-hidden {
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
-}
 /* button filter */
 .filter-btn .button {
     color: var(--color-title);
@@ -330,7 +322,15 @@ margin-right: 30px;
     color: var(--color-bg-first);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
-
+.filter-btn {
+    width: 611px;
+    display: flex;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+    margin-bottom: 50px;
+}
 /* article filter */
 .exampl-list .exempl-title{
     font-weight: 700;
@@ -352,34 +352,11 @@ margin-right: 30px;
     padding: 95px 0;
 
 }
-.filter-btn{
-    width: 611px;
-    display: flex;
-    justify-content: space-between;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 50px;
-}
-.section-portfolio .exampl-list{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-top: -30px;
-    margin-right: -30px;
-}
-.exampl-item{
-    margin-top: 30px;
-    margin-right: 30px;
-}
+
 .section-portfolio .description-img{
     border-left: 1px solid #EEEEEE;
     border-right: 1px solid #EEEEEE;
     border-bottom: 1px solid #EEEEEE;
     text-align: left;
     padding: 20px 24px;
-}
-.exampl-item img{
-    display: block;
-    max-width: 100%;
-    height: auto;
 }
