--- a/styles/styles.css
+++ b/styles/styles.css
@@ -92,6 +92,7 @@ img {
 }
 .logo:hover, .logo:focus{
     opacity: 0.7;
+    cursor: pointer;
 }
 .header .logo-web{
     color: #000;
@@ -121,6 +122,7 @@ img {
 .nav-item:hover,
 .nav-item:focus{
     color: var(--color-accent);
+    cursor: pointer;
 }
 
 /* contact header */
@@ -146,11 +148,21 @@ img {
 .header .contact-phone{
     margin-left: 50px;
 }
+.header-container .contact-phone::before {
+    content:" ";
+    content: '';
+    width: 20px;
+    height: 20px;
+    background-color: #188CE8;
+    background-image: url('./image/phone.svg');
+}
+
 .contact .contact-mail:hover,
  .contact .contact-mail:focus, 
  .contact .contact-phone:hover, 
  .contact .contact-phone:focus{
     color: var(--color-accent);
+    cursor: pointer;
 }
 
 /* Hero */
@@ -191,6 +203,7 @@ img {
 .hero-btn:hover,
 .hero-btn:focus{
     background: #188CE8;
+    cursor: pointer;
 }
 
 /* Advanteges */
@@ -321,6 +334,7 @@ img {
     background-color: var(--color-accent);
     color: var(--color-bg-first);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    cursor: pointer;
 }
 .filter-btn {
     width: 611px;
@@ -341,13 +355,13 @@ img {
     color: var(--color-title);
 }
 .exampl-list .exempl-text{
-
     font-size: 16px;
     line-height: 1.88;
-
     color: var(--color-text);
 }
-
+.exampl-list .exampl-item:hover{
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .section-portfolio{
     padding: 95px 0;
 
